fix attempt for janky animation on safari

--- a/src/styles/hometemp.css
+++ b/src/styles/hometemp.css
@@ -180,6 +180,18 @@
     color: transparent;
 
     background-image: url('/public/img/stby_0.png');
+    
+    /*fix janky animations on that excuse of a browser called safari*/
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
+    transform: translate3d(0,0,0);
+    opacity: 1;
+    will-change: transform, opacity, background-image;
+    /*add for good measure*/
+    -moz-backface-visibility: hidden; 
+    -moz-transform-style: preserve-3d;
 }
 
 .scr_active {
